<resources>
    <string name="app_name">parking</string>
    <string name="LOGIN">LOGIN</string>
    <string name="parking">parking</string>
    <string name="carpar">carpar</string>
    <string name="register">REGISTER</string>
    <string name="parking_registration">PARKING REGISTRATION</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="enter_email">Email</string>
    <string name="enter_mobile_number">Mobile_Number</string>
    <string name="submit">SUBMIT</string>
    <string name="sublog">SUBMIT</string>
    <string name="enter_passwordlog">Enter Password</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="parkingapp">Parkingapp</string>

    <string name="booking_detail">Booking Detail</string>
    <string name="support_contact">Support Contact</string>
    <string name="share">Share</string>
    <string name="booking">Booking</string>
    <string name="payment">Payment</string>
    <string name="logout">Logout</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="Name">Name</string>


</resources>